# moonblokz-probe

./: Cargo.toml  DEPLOYMENT.md  IMPLEMENTATION.md  LICENSE  LOGGING.md  LOG_LEVEL_MIGRATION.md  QUICKSTART.md  README.md  USB_ARCHITECTURE.md  build.sh  config.toml.example  moonblokz-probe-spec.md  moonblokz-probe.service  moonblokz_test_infrastructure_full_spec.md  quick_start.sh  setup.sh  test-setup.sh  test_config.toml
.github/: copilot-instructions.md
src/: command_executor.rs  commands.rs  config.rs  error.rs  log_collector.rs  log_entry.rs  main.rs  node_update.rs  probe_update.rs  telemetry_sync.rs  types.rs  update_manager.rs  usb_collector.rs  usb_manager.rs
versioninfo/probe/: version.json
