[package]
name = "moonblokz-probe"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-serial = "5.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
crc32fast = "1.3"
futures = "0.3"
