[package]
name = "moonblokz-probe"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio-serial = "5.4"
crc32fast = "1.4"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
simple_logger = "5.0"

